# image-auditor

./: .env.example  .gitignore  .goreleaser.yml  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  llm.rs  main.rs  patch.rs  scanner.rs  tui.rs
src/scanner/: checks.rs  mod.rs
src/tui/: input.rs  mod.rs
src/tui/render/: detail.rs  menu.rs
