[package]
name = "image-auditor"
version = "0.2.0"
edition = "2024"
description = "Image delivery issue scanner for HTML/PHTML/JS/TS codebases"

[[bin]]
name = "image-auditor"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
walkdir = "2.5"
regex = "1.12"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dotenvy = "0.15"
